--- a/package.json
+++ b/package.json
@@ -15,12 +15,20 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@tsparticles/engine": "^3.8.1",
+        "@tsparticles/react": "^3.0.0",
+        "@tsparticles/slim": "^3.8.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.4.7",
         "lucide-react": "^0.475.0",
+        "motion": "^12.4.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-scroll": "^1.9.3",
-        "tailwindcss-animate": "^1.0.7"
+        "react-simple-typewriter": "^5.0.1",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss-animate": "^1.0.7",
+        "typewriter-effect": "^2.21.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
