--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "motion": "^12.4.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-error-boundary": "^5.0.0",
+        "react-router-dom": "^7.2.0",
         "react-scroll": "^1.9.3",
         "react-simple-typewriter": "^5.0.1",
         "tailwind-merge": "^3.0.2",
