--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
         "lucide-react": "^0.475.0",
         "motion": "^12.4.7",
         "react": "^19.0.0",
+        "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
         "react-router-dom": "^7.2.0",
         "react-scroll": "^1.9.3",
         "react-simple-typewriter": "^5.0.1",
+        "react-vertical-timeline-component": "^3.5.3",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
         "typewriter-effect": "^2.21.0"
@@ -38,6 +40,7 @@
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@types/react-scroll": "^1.8.10",
+        "@types/react-vertical-timeline-component": "^3.3.6",
         "@vitejs/plugin-react-swc": "^3.8.0",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.19.0",
