--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.7.2",
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@lottiefiles/dotlottie-react": "^0.13.2",
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
@@ -26,6 +27,7 @@
         "react-bootstrap": "^2.10.9",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^5.0.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.2.0",
         "react-scroll": "^1.9.3",
         "react-simple-typewriter": "^5.0.1",
