--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "redirects": [
         {
-            "source": "/404",
+            "source": "/*",
             "destination": "/404",
             "statusCode": 404
         }
