--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@tsparticles/engine": "^3.8.1",
         "@tsparticles/react": "^3.0.0",
         "@tsparticles/slim": "^3.8.1",
+        "@vercel/analytics": "^1.5.0",
         "clsx": "^2.1.1",
         "framer-motion": "^12.4.7",
         "lucide-react": "^0.475.0",
